# glyph

./: .dockerignore  .env  .envrc  .eslintignore  .eslintrc.cjs  .gitignore  .gitmojirc.json  .lintstagedrc  .npmrc  .prettierignore  CLA  CODEOWNERS  Dockerfile  Gemfile  LICENSE  README.md  buildspec.yml  cspell.config.json  doppler.yaml  eslint.config.js  graphql.config.cjs  houdini.config.js  kubeconfig  lint-staged.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  prettier.config.js  schema.graphql  svelte.config.js  syncpack.config.cjs  tsconfig.json  turbo.json  unocss.config.ts  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: automation-preview-cleanup.yml  automation-preview-comment.yml  build.yml  cd-dev.yml  cd-preview-setup.yml  cd-preview-teardown.yml  cd-preview.yml  (+11 more)
.github/workflows-disabled/: build.yml  cd-production.yml  tests-e2e.yml  tool-cache.yml
db/: schema.sql
docker/: pgbouncer.dockerfile
docs/: CLA  CODE_OF_CONDUCT.md
infra/: package.json
patches/: @pandacss__generator@0.37.1.patch  @repeaterjs__repeater@3.0.6.patch  @vercel__nft@0.24.4.patch  @vercel__nft@0.26.0.patch  @vercel__nft@0.26.2.patch  svelty-picker@5.1.0.patch
prisma/: schema.prisma
scripts/: generate-jwk.js  vercel-ignore.sh
src/: app.d.ts  app.html  error.html  features.json  service-worker.ts
static/: manifest.json
tests/: index.test.ts
wasm/: Cargo.toml  package.json  pnpm-lock.yaml
wasm/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
(+2733 files in other folders)
