[package]
name = "wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
argon2 = { version = "0.5.0", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
